<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:and="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home4"
        android:title="@string/title_home"
         />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_foot"
        android:title="@string/title_calculator"
        />

    <item
        android:id="@+id/navigation_classification"
        android:icon="@drawable/ic_bin"
        android:title="@string/title_classification"
         />

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/ic_education"
        android:title="@string/title_general"
       />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_avatar"
        android:title="@string/title_settings"
        />
</menu>
