<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bottomnavigation.HomeFragment"
        android:label="@string/title_home"

        tools:layout="@layout/fragment_home" >

    </fragment>

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.bottomnavigation.CarbonCalculatorFragment"
        android:label="@string/title_calculator"

        tools:layout="@layout/fragment_carbon_calculator" />

    <fragment
        android:id="@+id/navigation_classification"
        android:name="com.example.bottomnavigation.WasteClassificationFragment"
        android:label="@string/title_classification"

        tools:layout="@layout/fragment_waste_classification" />

    <fragment
        android:id="@+id/navigation_general"
        android:name="com.example.bottomnavigation.GeneralFragment"
        android:label="@string/title_general"

        tools:layout="@layout/fragment_general" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.bottomnavigation.SettingsFragment"
        android:label="@string/title_settings"

        tools:layout="@layout/fragment_settings" />
</navigation>
