<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/test_main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/takePictureBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#00DEA208"
            android:drawableTop="@drawable/ic_camera4"
            android:text="@string/take_photo"
            android:fontFamily="@font/segoe2"
            android:textSize="12dp"
            android:textColor="@color/test_text_color"

            />
        <Button
            android:id="@+id/pickPictureBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_photo"
            android:textSize="12dp"
            android:fontFamily="@font/segoe2"
            android:background="#00DEA208"
            android:drawableTop="@drawable/ic_gallery4"
            android:layout_marginLeft="20dp"
            android:textColor="@color/test_text_color"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/segoe2"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:text="@string/wasteGuide"
        android:textAlignment="center"
        android:textColor="@color/test_text_color"
        android:textSize="20sp"/>


    <ImageView
        android:id="@+id/wasteImageView"
        android:layout_width="200dp"
        android:layout_height="216dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_app_icon" />

    <TextView
        android:id="@+id/processResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
